--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
  <!--Fonts-->
       <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
       <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:600' rel='stylesheet' type='text/css'>
-<!--       Efectos Animated Jquery -->
       <script src="js/wow.min.js"></script>
          <script>
             new WOW().init();
@@ -64,6 +63,10 @@
                   <p class="presentation">
                      I would love to help you in whatever your team needs.
                   </p>
+               </div>
+               <div>
+              <!-- CV -->
+                  <button class="btn btn-default cv"><a href="images/cv/CVSharon.pdf" target="_blank">Look my CV</a></button>
                </div>
             </div>
          </div>
@@ -160,7 +163,7 @@
                   <div class="col-md-4 col-xs-12">
                      <div class="caja2">
                         <div class="info2">
-                           <a href="http://kaleshads.github.io/bambini/"><h4>Enjoy Challenge</h4></a>
+                           <a href="http://kaleshads.github.io/bambini/" target="_blank"><h4>Enjoy Challenge</h4></a>
                            <p>Hackaton: Hack For Equality (1st. Place)</p>
                            <p>Collaborative work with Laboratoria's partners, We had only a month learning HTML5 and CSS3.</p>
                         </div>
@@ -173,7 +176,7 @@
                   <div class="col-md-4 col-xs-12">
                      <div class="caja2">
                         <div class="info2">
-                           <a href="http://kaleshads.github.io/escueladedanzap/"><h4>Escuela de Danza</h4></a>
+                           <a href="http://kaleshads.github.io/escueladedanzap/" target="_blank"><h4>Escuela de Danza</h4></a>
                            <p>A individual work made with intermediate HTML5 and CSS3, it doesn't have any framework. There are four pages in the site.</p>
                         </div>
                         <img class= "portafolio" src="images/works/danza.png">
@@ -185,7 +188,7 @@
                   <div class="col-md-4 col-xs-12">
                      <div class="caja2">
                         <div class="info2">  
-                           <a href="http://kaleshads.github.io/Primes-Theme/"><h4>Primes</h4></a>
+                           <a href="http://kaleshads.github.io/Primes-Theme/" target="_blank"><h4>Primes</h4></a>
                            <p>A work made with other girl, with HTML5 and CSS3 but the aren't any framework but there are itself grid system for the site.</p>
                         </div>
                         <img class= "portafolio" src="images/works/primes.png">
@@ -199,7 +202,7 @@
                   <div class="col-md-4 col-xs-12">
                      <div class="caja2">
                         <div class="info2">
-                           <a href="http://kaleshads.github.io/Flat-Theme/"><h4>Flat Theme</h4></a>
+                           <a href="http://kaleshads.github.io/Flat-Theme/" target="_blank"><h4>Flat Theme</h4></a>
                            <p>Collaborative work made with advance HTML5, CSS3 and Bootstrap Framework. There are seven pages in the site.</p>
                         </div>
                         <img class= "portafolio" src="images/works/flat-theme.png">
@@ -211,7 +214,7 @@
                   <div class="col-md-4 col-xs-12">
                      <div class="caja2">
                         <div class="info2">
-                           <a href="http://kaleshads.github.io/Kane-Theme/"><h4>Kane Theme</h4></a>
+                           <a href="http://kaleshads.github.io/Kane-Theme/" target="_blank"><h4>Kane Theme</h4></a>
                            <p>Project made with advance HTML5 and CSS3, animate wow script, Bootstrap Framework and Sass. There are four pages for the site. It has a responsive design.</p>
                         </div>
                         <img class= "portafolio" src="images/works/kane.png">
@@ -223,7 +226,7 @@
                   <div class="col-md-4 col-xs-12">
                      <div class="caja2">
                         <div class="info2">
-                           <a href="http://zhernandez.github.io/Musas/"><h4>Musas</h4></a>
+                           <a href="http://zhernandez.github.io/Musas/" target="_blank"><h4>Musas</h4></a>
                            <p>Local Hackaton Laboratoria México</p>
                         
                            <p>Last Project made with advance HTML5 and CSS3, animated wow script, adapted bootstrap and basic JS. This is only a landing page for the organization. Responsive Design.</p>
@@ -242,35 +245,35 @@
             <div class="container-fluid">
          <div class="row">
             <div class="col-md-12 text-center">
-               <h2 class="secti">Contact Me</h2>
-               <h3 class="secti">Maybe You want say me "¡Hello!"</h3>
+               <h2 class="secti5">Contact Me</h2>
+               <h3>Maybe You want to say "¡Hello!"</h3>
             </div>
          </div>
          <div class="row">
             <div class="col-xs-3">
                <div class="text-center">
-                  <a href="https://github.com/KaleshaDS">
+                  <a href="https://github.com/KaleshaDS" target="_blank">
                      <img id="github" src="images/contact/github.png" alt="GitHub"/>
                   </a>
                </div>
             </div>
             <div class="col-xs-3">
                <div class="text-center">
-                  <a href="https://twitter.com/KaleshaDS">
+                  <a href="https://twitter.com/KaleshaDS" target="_blank">
                      <img id="twitter" src="images/contact/twitter.png" alt="Twitter">
                   </a>
                </div>
             </div>
             <div class="col-xs-3">
                <div class="text-center">
-                  <a href="https://mx.linkedin.com/in/kaleshads">
+                  <a href="https://mx.linkedin.com/in/kaleshads" target="_blank">
                      <img id="linkedin" src="images/contact/linkedin.png" alt="Linkedin"/>
                   </a>
                </div>
             </div>
             <div class="col-xs-3">
                <div class="text-center">
-                  <a href="mailto:dedi.kalesha@gmail.com">
+                  <a href="mailto:dedi.kalesha@gmail.com" target="_blank">
                      <img id="correo" src="images/contact/email.png" alt="Gmail"/>
                   </a>  
                </div>
